--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+# Node modules
+frontend/node_modules/
+backend/node_modules/
+
+# Build output
+frontend/build/
 dist
 dist-ssr
 *.local
