--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "lodash": "^4.17.23",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-redux": "^9.2.0",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
